--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="container-fluid">
         <h1>WEATHER DASHBOARD</h1>
-        <p>Search for a city to see its current and future weather!</p>
+        <p>Search for a city to see its current weather and a five-day forecast.</p>
     </header>
     <!-- Here's where the user will be able to search for a city or select from previous searches -->
     <main class="container row">
